// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzBreadcrumbs > Snapshots > should match snapshot - custom separator 1`] = `
"<nav class="fz-breadcrumbs text-sm" aria-label="Breadcrumb">
  <ol class="m-0 flex list-none gap-1 p-0">
    <li class="flex items-center gap-1">
      <div class="text-blue-500">Home</div><span aria-hidden="true"><span class="text-grey-300">→</span></span>
    </li>
    <li class="flex items-center gap-1">
      <div class="text-blue-500">Products</div><span aria-hidden="true"><span class="text-grey-300">→</span></span>
    </li>
    <li class="flex items-center gap-1">
      <div class="text-blue-500 text-grey-500" aria-current="page">Current Page</div>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`FzBreadcrumbs > Snapshots > should match snapshot - default state 1`] = `
"<nav class="fz-breadcrumbs text-sm" aria-label="Breadcrumb">
  <ol class="m-0 flex list-none gap-1 p-0">
    <li class="flex items-center gap-1">
      <div class="text-blue-500">Home</div><span aria-hidden="true"><span class="text-grey-300">/</span></span>
    </li>
    <li class="flex items-center gap-1">
      <div class="text-blue-500">Products</div><span aria-hidden="true"><span class="text-grey-300">/</span></span>
    </li>
    <li class="flex items-center gap-1">
      <div class="text-blue-500 text-grey-500" aria-current="page">Current Page</div>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`FzBreadcrumbs > Snapshots > should match snapshot - single breadcrumb 1`] = `"<!--v-if-->"`;

exports[`FzRouterBreadcrumbs > Snapshots > should match snapshot for automatic breadcrumbs 1`] = `
"<nav class="fz-breadcrumbs text-sm" aria-label="Breadcrumb">
  <ol class="m-0 flex list-none gap-1 p-0">
    <li class="flex items-center gap-1"><a href="/" class="router-link-active text-blue-500">home</a><span aria-hidden="true"><span class="text-grey-300">/</span></span></li>
    <li class="flex items-center gap-1"><a href="/foo" class="router-link-active text-blue-500">foo</a><span aria-hidden="true"><span class="text-grey-300">/</span></span></li>
    <li class="flex items-center gap-1"><span class="text-grey-500" aria-current="page">bar</span>
      <!--v-if-->
    </li>
  </ol>
</nav>
<div>Page</div>"
`;

exports[`FzRouterBreadcrumbs > Snapshots > should match snapshot for static breadcrumbs 1`] = `
"<nav class="fz-breadcrumbs text-sm" aria-label="Breadcrumb">
  <ol class="m-0 flex list-none gap-1 p-0">
    <li class="flex items-center gap-1"><a aria-current="page" href="/" class="router-link-active router-link-exact-active text-blue-500">home</a><span aria-hidden="true"><span class="text-grey-300">/</span></span></li>
    <li class="flex items-center gap-1"><a href="/foo" class="text-blue-500">foo</a><span aria-hidden="true"><span class="text-grey-300">/</span></span></li>
    <li class="flex items-center gap-1"><span class="text-grey-500" aria-current="page">bar</span>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;
